# huffman

./: .gitignore  CMakeLists.txt  UTILITY  UTILITY.cpp  a.txt  b  b.txt  c.txt  huffman  huffman.cbp  huffman_tester  huffman_tester.cpp  huflib  tester
console_util/: block_rw.cpp  block_rw.h  utility.cpp  utility.h
lib/: compressor.cpp  compressor.h  decompressor.cpp  decompressor.h
